js/js.translator/testData/incremental/invalidation/addMethodToOpenClassWithConsumer/lib2/l2.0.kt
package sample

fun use(a: A): Int = a.foo()
